@@ -1,5 +1,7 @@
 package rut.miit.food.express.service.impl;
 
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 import rut.miit.food.express.dto.category.CategoryDto;
 import rut.miit.food.express.entity.DishCategory;
@@ -8,6 +10,7 @@ import rut.miit.food.express.service.DishCategoryService;
 
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 @Service
 public class DishCategoryServiceImpl implements DishCategoryService {
@@ -18,6 +21,7 @@ public class DishCategoryServiceImpl implements DishCategoryService {
     }
 
     @Override
+    @CacheEvict(value = "categories", allEntries = true)
     public void addCategory(String name) {
         Set<String> existingNames = categoryRepository.findAllNames();
         DishCategory category = new DishCategory(name, existingNames);
@@ -32,9 +36,10 @@ public class DishCategoryServiceImpl implements DishCategoryService {
     }
 
     @Override
+    @Cacheable("categories")
     public List<CategoryDto> getAllCategories() {
         List<DishCategory> categories = categoryRepository.findAll();
-        return categories.stream().map(c -> new CategoryDto(c.getId(), c.getName())).toList();
+        return categories.stream().map(c -> new CategoryDto(c.getId(), c.getName())).collect(Collectors.toList());
     }
 
 }
